# ai-real-economy-bottleneck-simulator

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: developer_guide.md  gui_guide.md  limitations.md  model_reference.md  security_audit.md  theory_audit.md  theory_mapping.md  validation.md
src/realgrowthsim/: __init__.py  __main__.py  cli.py
src/realgrowthsim/data/presets/: active_bottleneck_preemption.json  baseline.json  compute_only_overbuild_stress.json  conservative_stress.json  information_fast_reflection_slow.json  institutional_acceleration.json  institutional_risk_shock.json  resource_trust_shock.json  (+2 more)
src/realgrowthsim/gui/: __init__.py  app.py  components.py
src/realgrowthsim/io/: __init__.py  export.py  report.py  schema.py
src/realgrowthsim/model/: __init__.py  catalog.py  dynamics.py  equations.py  events.py  institutional.py  investment.py  params.py  physical.py  regimes.py  state.py
src/realgrowthsim/optimize/: __init__.py  cvar.py  kkt.py  robust.py  shares.py
src/realgrowthsim/rules/: __init__.py  allocation.py  core.py  institutional.py  physical.py  registry.py  risk.py
src/realgrowthsim/sim/: __init__.py  engine.py  integrators.py  interpretation.py  scenarios.py  stochastic.py  validation.py
tests/: test_allocation.py  test_equations.py  test_events.py  test_gui_smoke.py  test_interpretation.py  test_rules_core.py  test_rules_institutional.py  test_rules_physical.py  test_simulation.py
(+8 files in other folders)
