[project]
name = "realgrowthsim"
version = "0.1.0"
description = "Interactive simulator for AI capability growth, real-economy bottlenecks, and translation gaps."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [
  { name = "ai-real-economy-bottleneck-simulator contributors" }
]
keywords = ["growth-model", "ai", "streamlit", "simulation", "bottlenecks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.24",
  "pydantic>=2.8",
  "scipy>=1.13",
  "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[project.scripts]
realgrowthsim = "realgrowthsim.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realgrowthsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
